# socp

./: .travis.yml  CMakeLists.txt  LICENSE  README  README.md  appveyor.yml
cmake/: CMakeLists.txt  SOCPConfig.cmake  socp.pc.in
data/vtolUAV/: obstacles  waypoints
documentation/: CMakeLists.txt  Doxyfile
python/: CMakeLists.txt  SOCP.i
python/goddard/: CMakeLists.txt  Goddard.i  pyGoddard.py
src/: CMakeLists.txt
src/maps/: CMakeLists.txt
src/maps/obstacle/: CMakeLists.txt  obstacle.cpp  obstacle.hpp
src/models/: CMakeLists.txt
src/models/covid19/: CMakeLists.txt  README.md  covid19.cpp  covid19.hpp
src/models/doubleIntegrator/: CMakeLists.txt  doubleIntegrator.cpp  doubleIntegrator.hpp
src/models/goddard/: CMakeLists.txt  goddard.cpp  goddard.hpp
src/models/goddard/docs/: goddard.bib
src/models/interceptor/: CMakeLists.txt  interceptor.cpp  interceptor.hpp
src/models/interceptor/docs/: interceptor.bib
src/models/vtolUAV/: CMakeLists.txt  vtolUAV.cpp  vtolUAV.hpp
src/socp/: CMakeLists.txt  commonType.hpp  mThread.cpp  mThread.hpp  map.hpp  model.hpp  odeTools.cpp  odeTools.hpp  shooting.cpp  shooting.hpp
tests/: CMakeLists.txt  testCovid19.cpp  testDoubleIntegrator.cpp  testDoubleIntegrator_WP.cpp  testGoddard.cpp  testGoddard.py  testInterceptor.cpp  testVtolUAV.cpp
trace/covid19/: README.md  mplot.m
trace/doubleIntegrator/: mplot.m
trace/goddard/: gplot.sh  mplot.m
trace/interceptor/: mplot.m
trace/vtolUAV/: mplot.m
