file(GLOB Source_Files *.cpp)
source_group("Source Files" FILES ${Source_Files})

if (BUILD_GODDARD)
	add_executable(testGoddard testGoddard.cpp)
	target_link_libraries(testGoddard socp goddard)
	install (TARGETS testGoddard DESTINATION bin)
endif ()

if (BUILD_VTOLUAV)
	add_executable(testVtolUAV testVtolUAV.cpp)
	target_link_libraries(testVtolUAV socp vtolUAV obstacle)
	install (TARGETS testVtolUAV DESTINATION bin)
endif ()

if (BUILD_INTERCEPTOR)
	add_executable(testInterceptor testInterceptor.cpp)
	target_link_libraries(testInterceptor socp interceptor)
	install (TARGETS testInterceptor DESTINATION bin)
endif ()

if (BUILD_COVID19)
	add_executable(testCovid19 testCovid19.cpp)
	target_link_libraries(testCovid19 socp covid19)
	install (TARGETS testCovid19 DESTINATION bin)
endif ()

if (BUILD_DOUBLE_INTEGRATOR)
	add_executable(testDoubleIntegrator testDoubleIntegrator.cpp)
	target_link_libraries(testDoubleIntegrator socp doubleIntegrator)
	install (TARGETS testDoubleIntegrator DESTINATION bin)
	
	add_executable(testDoubleIntegrator_WP testDoubleIntegrator_WP.cpp)
	target_link_libraries(testDoubleIntegrator_WP socp doubleIntegrator)
	install (TARGETS testDoubleIntegrator_WP DESTINATION bin)
endif ()